# ChiaAutoplotter-Backend

./: .env  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  celerybeat-schedule  docker-compose-services.yml  docker-compose.debug.yml  docker-compose.test-cov.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml
app/: __init__.py  celery.py
app/api/: __init__.py  deps.py
app/api/routes/: base.py  directory.py  login.py  plot.py  plot_queue.py  server.py  tasks.py  transfer.py  updates.py  user.py
app/api/routes/server/: __init__.py  directory.py  plot_queue.py  plots.py
app/core/: celery_listener.py  config.py  security.py  tasks.py
app/core/console/: __init__.py  connection_manager.py  log_collector.py
app/core/console/commands/: __init__.py  base.py  df.py  dir_commands.py  folder_commands.py  worker.py
app/core/console/commands/chia/: __init__.py  base.py  init.py  install.py  plots.py
app/core/listeners/: __init__.py  base.py  objects.py  tasks.py
app/core/tasks/: __init__.py  plot_queue.py  plot_scan.py  server_init.py  server_ping.py  transfer_scan.py
app/crud/: __init__.py  base.py  directory.py  plot.py  plot_queue.py  server.py  transfer.py  user.py
app/db/: __init__.py  base_class.py  session.py
app/models/: __init__.py  directory.py  plot.py  plot_queue.py  server.py  transfer.py  user.py
app/schemas/: __init__.py  console.py  directories.py  directory.py  filtration.py  misc.py  plot.py  plot_queue.py  server.py  tasks.py  token.py  transfer.py  user.py
app/utils/: __init__.py  auth.py  hash.py  repeater.py
tests/: __init__.py  conftest.py
tests/server/: test_delete.py  test_get.py  test_get_by_id.py  test_post.py  test_put.py
tests/server/directory/: test_get.py  test_post.py
tests/server/plot_queue/: test_get.py
tests/server/plots/: test_get_created.py
