[tool.poetry]
name = "ChiaFarmerManager"
version = "0.1.0"
description = "A backend with FastAPI, Celery and SQLAlchemy to control flow of Chia plotting and harvesting on multiple machines"
authors = ["LeaveMyYard"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
sqlalchemy-stubs = "^0.4"
rope = "^0.18.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = "C0330, C0326, F0401, W0613"

[tool.pylint.format]
max-line-length = "88"